--- a/work8/spring-market/frontend-server/src/main/resources/static/views/home.html
+++ b/work8/spring-market/frontend-server/src/main/resources/static/views/home.html
@@ -1,6 +1,11 @@
 <div ng-controller="HomeController">
     <h1>home</h1>
-    <p>
-        Добро пожаловать в Spring market
-    </p>
+    <input type="text" ng-model="user.login"/>
+    <input type="text" ng-model="user.password"/>
+    <button ng-click="signUp()">sign up</button>
+    <button ng-click="logIn()">log in</button>
+    <button ng-click="logOut()">log out</button>
+    <p>{{user.login}}</p>
+    <p>{{user.password}}</p>
+    <p>{{user.token}}</p>
 </div>
